--- a/assets/styles.css
+++ b/assets/styles.css
@@ -88,3 +88,20 @@ input:focus {
     font-size: 13px;
     margin-top: 10px;
 }
+.custom-square {
+    width: 42px !important;
+    height: 42px !important;
+    display: inline-flex !important;
+    align-items: center;
+    justify-content: center;
+    margin-left: 15px !important; 
+    border-radius: 8px;
+    padding: 0 !important;
+    border: 1px solid #ffffff;
+    transition: 0.3s; 
+}
+
+.custom-square:hover {
+    background-color: #ffffff;
+    color: #121212 !important;
+}
